--- a/client/core/notifications.html
+++ b/client/core/notifications.html
@@ -7,7 +7,7 @@
   <paper-dropdown id="notificationsmenu" class="dropdown" halign="right" transition="">
     <core-menu name="menunot">
       <div>
-        <span flex>Notifications</span>
+        <span>Add notifications from Mongo shell</span>
       </div>
       {{#each notifications}}
       <paper-item data-del id="not-{{_id}}">{{name}}</paper-item>
