--- a/client/modules/module1/module1.html
+++ b/client/modules/module1/module1.html
@@ -1,6 +1,7 @@
 
 <template name="module1">
   <div horizontal layout>
+    <p>Add data from Mongo shell into collection module1</p>
     {{#each module1}}
     <paper-item data-del>{{name}}</paper-item>
     {{/each}}
