--- a/client/modules/module2/module2.html
+++ b/client/modules/module2/module2.html
@@ -1,6 +1,7 @@
 
 <template name="module2">
   <div horizontal layout>
+    <p>Add data from Mongo shell into collection module2</p>
     {{#each module2}}
     <paper-item data-del>{{name}}</paper-item>
     {{/each}}
