--- a/client/modules/module1/module1.html
+++ b/client/modules/module1/module1.html
@@ -1,11 +1,10 @@
 
 <template name="module1">
-  <div horizontal layout>
+  <div>
     <p>Add data from Mongo shell into collection module1</p>
     {{#each module1}}
-    <paper-item data-del>{{name}}</paper-item>
+      <div>{{name}}</div>
     {{/each}}
   </div>
-  <paper-fab mini icon="create"></paper-fab>
 </template>
 
