--- a/client/lib/toast.html
+++ b/client/lib/toast.html
@@ -1,7 +1,3 @@
-<template name="toastgreen">
-  <paper-toast id="toastgreen"></paper-toast>
-</template>
-
-<template name="toastred">
-  <paper-toast id="toastred"></paper-toast>
+<template name="toast">
+  <paper-toast id="toast" class="toast{{color}}" text="{{text}}"></paper-toast>
 </template>
