Review of import files and README.md

--- a/client/core/about.html
+++ b/client/core/about.html
@@ -1,6 +1,9 @@
 <template name="about">
   <paper-action-dialog id="about" backdrop autoCloseDisabled layered="false">
-    <p>A simple test with Meteor and Polymer</p>
+    <center width="50%">
+      Cross-platform (web, android, ios) test with Meteor and Polymer<br/>
+      Source code at <a href="http://github.com/appshore/meteor-polymer-mobile" target="_new">github.com/appshore/meteor-polymer-mobile</a>
+    </center>
     <paper-button affirmative autofocus>Close</paper-button>
   </paper-action-dialog>
 </template>
