--- a/client/core/notifications.html
+++ b/client/core/notifications.html
@@ -5,7 +5,7 @@
     <paper-icon-button id="notificationsbtn" icon="social:notifications-none"></paper-icon-button>
   {{/if}}
   
-  <paper-dialog id="notificationsmenu" class="dialog-notifications" layered="false">
+  <paper-dialog id="notificationsmenu" class="dialog-notifications" layered="false" transition="core-transition-right">
     <span>{{countNotifications}} notifications<br/> add more from Mongo shell</span>
     <core-menu id="menunot">
       {{#each notifications}}
