--- a/client/client.html
+++ b/client/client.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-
-    <script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
+    
+    <!-- check client/core/imports.html file for Polymer/webcomponents import-->
+    
   </head>
 
   <body>
