--- a/client/core/imports.html
+++ b/client/core/imports.html
@@ -1,24 +1,31 @@
-<!-- Core Components -->
-<link rel="import" href="/bower_components/core-collapse/core-collapse.html">
-<link rel="import" href="/bower_components/core-drawer-panel/core-drawer-panel.html">
-<link rel="import" href="/bower_components/core-dropdown/core-dropdown.html">
-<link rel="import" href="/bower_components/core-header-panel/core-header-panel.html">
-<link rel="import" href="/bower_components/core-icons/core-icons.html">
-<link rel="import" href="/bower_components/core-icons/communication-icons.html">
-<link rel="import" href="/bower_components/core-icons/notification-icons.html">
-<link rel="import" href="/bower_components/core-icons/social-icons.html">
-<link rel="import" href="/bower_components/core-iconset-svg/core-iconset-svg.html">
-<link rel="import" href="/bower_components/core-item/core-item.html">
-<link rel="import" href="/bower_components/core-menu/core-menu.html">
-<link rel="import" href="/bower_components/core-toolbar/core-toolbar.html">
+<!-- 
+  The setup below is the only one that seems to work on all platforms (web, android, ios)
+  Removing the head tag or moving the script to the real head in client.html will break the build
+  If necessary add the import files required by polymer and web components
+-->
+  
+<head>
+  
+  <script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
 
-<!-- Paper Components -->
-<link rel="import" href="/bower_components/paper-button/paper-button.html">
-<link rel="import" href="/bower_components/paper-dialog/paper-dialog.html">
-<link rel="import" href="/bower_components/paper-dialog/paper-action-dialog.html">
-<link rel="import" href="/bower_components/paper-dropdown/paper-dropdown.html">
-<link rel="import" href="/bower_components/paper-fab/paper-fab.html">
-<link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="/bower_components/paper-item/paper-item.html">
-<link rel="import" href="/bower_components/paper-slider/paper-slider.html">
-<link rel="import" href="/bower_components/paper-toast/paper-toast.html">
+  <link rel="import" href="/bower_components/core-drawer-panel/core-drawer-panel.html">
+  <link rel="import" href="/bower_components/core-dropdown/core-dropdown.html">
+  <link rel="import" href="/bower_components/core-header-panel/core-header-panel.html">
+  <link rel="import" href="/bower_components/core-icons/core-icons.html">
+  <link rel="import" href="/bower_components/core-icons/communication-icons.html">
+  <link rel="import" href="/bower_components/core-icons/notification-icons.html">
+  <link rel="import" href="/bower_components/core-icons/social-icons.html">
+  <link rel="import" href="/bower_components/core-iconset-svg/core-iconset-svg.html">
+  <link rel="import" href="/bower_components/core-item/core-item.html">
+  <link rel="import" href="/bower_components/core-menu/core-menu.html">
+  <link rel="import" href="/bower_components/core-toolbar/core-toolbar.html">
+
+  <link rel="import" href="/bower_components/paper-button/paper-button.html">
+  <link rel="import" href="/bower_components/paper-dialog/paper-dialog.html">
+  <link rel="import" href="/bower_components/paper-dialog/paper-action-dialog.html">
+  <link rel="import" href="/bower_components/paper-dropdown/paper-dropdown.html">
+  <link rel="import" href="/bower_components/paper-fab/paper-fab.html">
+  <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
+  <link rel="import" href="/bower_components/paper-item/paper-item.html">
+  <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
+</head>
