sidebar icons changed
icon drawer was removed from polymer distribution

--- a/client/core/sidebar.html
+++ b/client/core/sidebar.html
@@ -2,7 +2,7 @@
 <template name="sidebar">
   <core-header-panel drawer>
     <core-toolbar id="navheader">
-      <paper-icon-button id="navicon2" icon="drawer"></paper-icon-button>
+      <paper-icon-button id="navicon2" icon="arrow-forward"></paper-icon-button>
       <span flex>Meteor Polymer</span>
     </core-toolbar>
     <core-menu>
